# nexus

./: .gitignore  Dockerfile  Taskfile.yml  pyproject.toml
recipes/mctest/: Taskfile.yml  properties.toml
recipes/papermc/: Dockerfile
recipes/papermc/server_data_template/: server.properties
recipes/valheim/: Dockerfile  InstallUpdate.sh  properties.toml
recipes/valheim/server_data_template/: valheim.sh
src/nexus/: __init__.py  portal.py  portal_room.py  recipe_book.py  spell.py  spell_book.py
src/nexus/app/: app.py  auth.py  portal.py  portal_room.py  recipe.py  recipe_book.py  spell.py  spell_book.py
src/nexus/utils/: docker.py  paths.py  print_output.py
